--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "autoprefixer": "^10.4.13",
     "core-js": "^3.8.3",
     "element-ui": "^2.15.12",
+    "firebase": "^9.14.0",
     "imagemin": "^8.0.1",
     "imagemin-cli": "^7.0.0",
     "imagemin-mozjpeg": "^10.0.0",
